<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.scan_credential_qr.ScanCredentialQrCodeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Verify credentials" />

    <LinearLayout
        android:id="@+id/qrCodeLayout"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            style="@style/ScanQRLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_fragment_margin"
            android:layout_marginEnd="@dimen/default_fragment_margin"
            android:text="@string/scan_the_qr_code_of_verifiable_credential" />

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/qrCodeView"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_margin="@dimen/default_fragment_margin" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/permissionsErrorLayout"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_fragment_margin"
        android:padding="@dimen/default_fragment_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/errorTitle"
            style="@style/ErrorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_denied" />

        <TextView
            android:id="@+id/permissionExplanation"
            style="@style/ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/permission_camera_explanation" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/ErrorButton"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_app_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>