<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomDialogBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".presentation.logout.LogoutFragment">

    <TextView
        android:id="@+id/title"
        style="@style/CardHeaderText"
        android:layout_marginTop="@dimen/default_card_padding"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_vc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/explanation"
        style="@style/TextViewExplanation"
        android:layout_marginStart="@dimen/default_fragment_margin"
        android:layout_marginEnd="@dimen/default_fragment_margin"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_vc_explanation"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/confirmDeleteBtn"
        style="@style/PrimaryButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/default_fragment_margin"
        android:layout_marginEnd="@dimen/default_fragment_margin"
        android:layout_marginBottom="@dimen/default_fragment_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/progressView"
        layout="@layout/layout_progress_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>